--- a/web/manifest.json
+++ b/web/manifest.json
@@ -18,6 +18,11 @@
             "src": "icons/Icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
+        },
+        {
+            "src": "icons/agrargo_logo.svg",
+            "sizes": "88x74",
+            "type": "image/svg"
         }
     ]
 }
