--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-
+  sdk: ">=2.14.0 <3.0.0"
+#  >=2.14.0 <3.0.0
 dependencies:
   flutter:
     sdk: flutter
@@ -29,7 +29,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.3
-
+  firebase_auth: ^3.3.8
+  firebase: ^9.0.2
+  firebase_core: ^1.12.0
+  flutter_signin_button: ^2.0.0
+  flutterfire_cli: ^0.1.1+2
+  google_sign_in: ^5.2.4
+  google_sign_in_web: ^0.10.0+5
+#dependency_overrides:
+ # firebase_auth_platform_interface: 6.1.11
 dev_dependencies:
   flutter_test:
     sdk: flutter
