--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutterfire_cli: ^0.1.1+2
   google_sign_in: ^5.2.4
   google_sign_in_web: ^0.10.0+5
+  provider: ^6.0.2
 #dependency_overrides:
  # firebase_auth_platform_interface: 6.1.11
 dev_dependencies:
