--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   google_sign_in: ^5.2.4
   google_sign_in_web: ^0.10.0+5
   provider: ^6.0.2
+  riverpod: ^1.0.3
+  flutter_riverpod: ^1.0.3
 #dependency_overrides:
  # firebase_auth_platform_interface: 6.1.11
 dev_dependencies:
