--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,8 @@ dependencies:
   flutterfire_cli: ^0.1.1+2
   google_sign_in: ^5.2.4
   google_sign_in_web: ^0.10.0+5
-  flutter_hooks: ^0.16.0
-  hooks_riverpod: ^0.14.0+1
   flutterfire_ui: ^0.3.6+1
+  flutter_riverpod: ^1.0.3
 #dependency_overrides:
  # firebase_auth_platform_interface: 6.1.11
 dev_dependencies:
