--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_riverpod: ^1.0.3
   cloud_firestore: ^3.1.10
   json_serializable: ^6.1.5
+  freezed: ^1.1.1
+  freezed_annotation: ^1.1.0
 #dependency_overrides:
  # firebase_auth_platform_interface: 6.1.11
 dev_dependencies:
