--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   json_serializable: ^6.1.5
   freezed: ^1.1.1
   freezed_annotation: ^1.1.0
+  provider: ^6.0.2
+  uuid: ^3.0.6
 #dependency_overrides:
  # firebase_auth_platform_interface: 6.1.11
 dev_dependencies:
