--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   freezed_annotation: ^1.1.0
   provider: ^6.0.2
   uuid: ^3.0.6
+  firebase_storage: ^10.2.9
 #dependency_overrides:
  # firebase_auth_platform_interface: 6.1.11
 dev_dependencies:
