--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   provider: ^6.0.2
   uuid: ^3.0.6
   firebase_storage: ^10.2.9
+  image_picker: ^0.8.4+11
+  file_picker: ^4.5.1
 #dependency_overrides:
  # firebase_auth_platform_interface: 6.1.11
 dev_dependencies:
