--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   firebase_storage: ^10.2.9
   image_picker: ^0.8.4+11
   file_picker: ^4.5.1
+  liquid_progress_indicator: ^0.4.0
+  google_fonts: ^2.3.1
 #dependency_overrides:
  # firebase_auth_platform_interface: 6.1.11
 dev_dependencies:
