--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   google_fonts: ^2.3.1
   numberpicker: ^2.1.1
   age_calculator: ^1.0.0
+  textfield_tags: ^2.0.0
+  filter_list: ^1.0.1
 #dependency_overrides:
  # firebase_auth_platform_interface: 6.1.11
 dev_dependencies:
