--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   age_calculator: ^1.0.0
   textfield_tags: ^2.0.0
   filter_list: ^1.0.1
+  syncfusion_flutter_datepicker: ^20.1.47
 #dependency_overrides:
  # firebase_auth_platform_interface: 6.1.11
 dev_dependencies:
