--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   textfield_tags: ^2.0.0
   filter_list: ^1.0.1
   syncfusion_flutter_datepicker: ^20.1.47
+  table_calendar: ^3.0.5
 #dependency_overrides:
  # firebase_auth_platform_interface: 6.1.11
 dev_dependencies:
