--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   fluttertoast: ^8.0.9
   table_calendar: ^3.0.5
   syncfusion_flutter_datepicker: ^20.1.47
+  firebase_chat: ^0.0.6+1
+  flutter_firebase_chat_core: ^1.5.2
+  flutter_chat_ui: ^1.5.6
 
 #dependency_overrides:
  # firebase_auth_platform_interface: 6.1.11
