--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   firebase_chat: ^0.0.6+1
   flutter_firebase_chat_core: ^1.5.2
   flutter_chat_ui: ^1.5.6
+  searchfield: ^0.6.2
 
 #dependency_overrides:
  # firebase_auth_platform_interface: 6.1.11
